--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 html { 
-  background: url(indexbg.jpg) no-repeat center center fixed; 
+  background: url("indexbg.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+
 body {
     margin: 60px auto;
     width: 70%;
