--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html { 
-  background: url("https://raw.github.com/sleephackers/sleephackers.github.io/blob/master/indexbg.jpg") no-repeat center center fixed; 
+  background: url("https://github.com/sleephackers/sleephackers.github.io/raw/master/indexbg.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
