--- a/css/main.css
+++ b/css/main.css
@@ -1,51 +1,27 @@
-html { 
-  background: url("https://github.com/sleephackers/sleephackers.github.io/raw/master/indexbg.jpg") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+.ul {
+  list-style-type: none;
+  margin: 0;
+  border: 1px solid #000;
+   padding: 0;
+  overflow: hidden;
+  background-color: #000;
 }
 
-body {
-    margin: 60px auto;
-    width: 70%;
-}
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-}
-a:hover {
-    text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 3px solid #d5d5d5;
-    font-size: .8em;
+.li {
+  border-bottom: 1px solid #000;
+  float: right;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
+.li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-right: 15px;
 }
 
-ul.posts li {
-    list-style: none;
-}
+/* Change the link color to #111 (black) on hover */
+.li a:hover {
+  background-color: #111;
+} 
